Align code for better readability
Adjusted indentation and alignment in test files and other sections for improved code readability and consistency. No functional changes were made to the existing codebase.